build.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\AddBikeActivity.java:674: error: cannot find symbol
    private void populateForm(GetBikeByIdResponse.BikeData bikeData) {
                                                 ^
  symbol:   class BikeData
  location: class GetBikeByIdResponse
D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsActivity.java:337: error: cannot find symbol
    private void updateBikeModelWithApiData(GetBikeByIdResponse.BikeData bikeData) {
                                                               ^
  symbol:   class BikeData
  location: class GetBikeByIdResponse
2 errors

[Incubating] Problems report is available at: file:///D:/motovista_deep/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\AddBikeActivity.java:674: error: cannot find symbol
      private void populateForm(GetBikeByIdResponse.BikeData bikeData) {
                                                   ^
    symbol:   class BikeData
    location: class GetBikeByIdResponse
  D:\motovista_deep\app\src\main\java\com\example\motovista_deep\BikeDetailsActivity.java:337: error: cannot find symbol
      private void updateBikeModelWithApiData(GetBikeByIdResponse.BikeData bikeData) {
                                                                 ^
    symbol:   class BikeData
    location: class GetBikeByIdResponse
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
17 actionable tasks: 1 executed, 16 up-to-date
